[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["tsutsumi-ozro <soccerbakadaiki@icloud.com>"]
readme = "README.md"
packages = [{include = "streamlit_app"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
pandas = "^1.5.3"
numpy = "1.23.3"
matplotlib = "^3.7.1"
llvmlite = "^0.39.1"
shap = "^0.41.0"
lightgbm = "^3.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
